sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:15: error: not found: value j
        echange(i+1,j);
                    ^